...
          <LimitedTextInput
            defaultValue={serial}
            label={t('Unified.ManualSerial.InputLabel')}
            limit={maxSerialNumberLength}
            handleChangeText={handleChangeText}
            accessibilityLabel={t('Unified.ManualSerial.InputLabel')}
            testID={testIdWithKey('SerialInput')}
          />
          {errorState.visible ? <Text style={styles.error}>{errorState.description}</Text> : null}
          <Text style={styles.subText}>{t('Unified.ManualSerial.InputSubText')}</Text>
        </View>
        <View style={styles.controlsContainer}>
          <View style={styles.buttonContainer}>
...
